--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
-$ 我我我我我我我我我我我我我我
+$ 你你你你你你你你你你你你你你你
 $ git checkout gh-pages
 </code></pre>
 
