--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8" />
-	<title>TMYAM WEBSITE</title>
+	<title>TMYAM MAIN</title>
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -63,7 +63,7 @@
                             <li class="current"><a href="index.html">home</a></li>
                             <li><a href="mac.html">mac</a></li>
                             <li><a href="ios.html">ios</a></li>
-                            <li><a href="blog.html">blog</a></li>
+                            <li><a href="http://tmyam.github.com">blog</a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="contact.html">contact</a></li>
                         </ul><!-- topnav -->
