--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                             <li><a href="index.html">home</a></li>
                             <li><a href="mac.html">mac</a></li>
                             <li><a href="ios.html">ios</a></li>
-                            <li><a href="http://tmyam.github.com">blog</a></li>
+                            <li><a href="blog.html">blog</a></li>
                             <li><a href="about.html">about</a></li>
                             <li class="current"><a href="contact.html">contact</a></li>
                         </ul><!-- topnav -->
