--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,7 @@
 		}
 		} 
 		</script>
-		<iframe style="margin:-164px 0px 0px 0px;" src ="http://tmyam.github.io" frameborder="0" scrolling="no" id="ifm" name="ifm" onload="javascript:dyniframesize('ifm');" width="100%" height="1000"> 
+		<iframe style="margin:-164px 0px 0px 0px;" src ="http://tmyam.github.io" frameborder="0" scrolling="yes" id="ifm" name="ifm" onload="javascript:dyniframesize('ifm');" width="100%"> 
 		</iframe>
 		<!-- end 插入 blog  -->
         
