--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,7 @@
         };includeFrame(); 
         </script>-->
         
-        <iframe id="frame_content" name="frame_content" src="http://tmyam.github.io" width="100%" height="0" scrolling="no" frameborder="0"></iframe>
+        <iframe id="frame_content" name="frame_content" src="http://tmyam.github.io/index.html" width="100%" height="0" scrolling="no" frameborder="0"></iframe>
 
         
         <!-- AFTER CONTENT -->
