--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,7 @@
                         <li><a title="Sina Weibo" href="http://service.weibo.com/share/share.php?url=http://zrshz.github.com&title=tmyam&nbsp;website"><span style="background:url(images/social/sina_weibo@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                         <li><a title="Tencent Weibo" href="http://v.t.qq.com/share/share.php?title=tmyam&nbsp;website&url=http://zrshz.github.com"><span style="background:url(images/social/tencent_weibo@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                     </ul>
-                    <address class="addr">Have a good life every day!</address>
+                    <h4><a class="customcolor" href="http://tmyam.github.com">original link</a></h4>
                 </section>
             </div>
             </div>
