--- a/mac.html
+++ b/mac.html
@@ -98,7 +98,7 @@
             <div id="aftercontent" class="twelve columns">
                 <section id="afterthecontent">
                     <ul class="sn">
-                        <li><a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://zrshz.github.com"><span style="background:url(images/social/facebook@2x.png);" class="icon-img"></span></a></li>
+                        <li><a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://zrshz.github.com"><span style="background:url(images/social/facebook@2x.png);background-size: 32px 32px;" class="icon-img"></span></a></li>
                         <li><a title="Twitter" href="https://twitter.com/intent/tweet?text=tmyam&nbsp;website&url=http://zrshz.github.com"><span style="background:url(images/social/twitter@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                         <li><a title="Email" href="mailto:tmyam@mail.com"><span style="background:url(images/social/email@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                         <li><a title="Sina Weibo" href="http://service.weibo.com/share/share.php?url=http://zrshz.github.com&title=tmyam&nbsp;website"><span style="background:url(images/social/sina_weibo@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
