--- a/mac.html
+++ b/mac.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="styles/inner.css" />
     <link rel="stylesheet" href="styles/color.css" />
 	<link rel="stylesheet" href="styles/layout.css" />
+	<link rel="stylesheet" href="styles/socialimage.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -98,7 +99,7 @@
             <div id="aftercontent" class="twelve columns">
                 <section id="afterthecontent">
                     <ul class="sn">
-                        <li><a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://zrshz.github.com"><span style="background:url(images/social/facebook@2x.png);background-size: 32px 32px;" class="icon-img"></span></a></li>
+                        <li><a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://zrshz.github.com"><span class="social-facebook icon-img"></span></a></li>
                         <li><a title="Twitter" href="https://twitter.com/intent/tweet?text=tmyam&nbsp;website&url=http://zrshz.github.com"><span style="background:url(images/social/twitter@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                         <li><a title="Email" href="mailto:tmyam@mail.com"><span style="background:url(images/social/email@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
                         <li><a title="Sina Weibo" href="http://service.weibo.com/share/share.php?url=http://zrshz.github.com&title=tmyam&nbsp;website"><span style="background:url(images/social/sina_weibo@2x.png);background-size: 32px 64px;" class="icon-img"></span></a></li>
