--- a/mac/ToShowDesktop/index.html
+++ b/mac/ToShowDesktop/index.html
@@ -22,12 +22,12 @@
 
 	<!-- CSS
   ================================================== -->
-	<link rel="stylesheet" href="styles/skeleton.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/inner.css" />
-    <link rel="stylesheet" href="styles/color.css" />
-	<link rel="stylesheet" href="styles/layout.css" />
-	<link rel="stylesheet" href="styles/socialimage.css" />
+	<link rel="stylesheet" href="/styles/skeleton.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/inner.css" />
+    <link rel="stylesheet" href="/styles/color.css" />
+	<link rel="stylesheet" href="/styles/layout.css" />
+	<link rel="stylesheet" href="/styles/socialimage.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,14 +35,14 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.png" />
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+	<link rel="shortcut icon" href="/images/favicon.png" />
+	<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
     
 	<!-- Demo Switcher
 	================================================== -->
-    <link id="layoutcss" href="styles/fixed-layout.css" rel="stylesheet" type="text/css" />
+    <link id="layoutcss" href="/styles/fixed-layout.css" rel="stylesheet" type="text/css" />
 
 </head>
 
