--- a/ToShowDesktop.html
+++ b/ToShowDesktop.html
@@ -82,8 +82,8 @@
         	<div class="container">
                 <ul id="apptopnav" class="tm-menu">
                     <li class="current"><a href="/index.html">main</a></li>
-                    <li><a href="/mac.html">help</a></li>
-                    <li><a href="/ios.html">support</a></li>
+                    <li><a href="/help.html">help</a></li>
+                    <li><a href="/support.html">support</a></li>
                 </ul>
             </div>
             <!--</div>-->
