--- a/mac/ToShowDesktop/zh-Hant/index.html
+++ b/mac/ToShowDesktop/zh-Hant/index.html
@@ -109,14 +109,14 @@
 		        
 		        <main>		        
 		        	<section id="latest">
-			        	<h2>Notes</h2>
+			        	<h2>Compatibility</h2>
 		        		<dl>
 		        		<div>
-		        			<dt>compatibility</dt>
+		        			<dt>require</dt>
 		        			<dd>Mac OS X 10.7 or later</dd>
 		        		</div>
 		        		<div>	
-		        			<dt>language</dt>
+		        			<dt>release</dt>
 		        			<dd><a href="../en/index.html" hreflang="en">English</a></dd>
 		        			<dd><a href="../zh/index.html" hreflang="zh-Hans">Simplified Chinese</a></dd>
 		        			<dd><a href="../zh-Hant/index.html" hreflang="zh-Hant">Traditional Chinese</a></dd>
