--- a/mac/ToShowDesktop/zh/index.html
+++ b/mac/ToShowDesktop/zh/index.html
@@ -81,9 +81,9 @@
         <div id="inheader">
         	<div class="container">
                 <ul id="apptopnav" class="tm-menu">
-                    <li class="current"><a href="index.html">main</a></li>
-                    <li><a href="help.html">help</a></li>
-                    <li><a href="support.html">support</a></li>
+                    <li class="current"><a href="index.html">主页</a></li>
+                    <li><a href="help.html">帮助</a></li>
+                    <li><a href="support.html">反馈</a></li>
                 </ul>
             </div>
             <!--</div>-->
