--- a/mac/ToShowDesktop/zh/help.html
+++ b/mac/ToShowDesktop/zh/help.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8" />
-	<title>ToShowDesktop Help</title>
+	<title>ToShowDesktop 帮助</title>
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -92,7 +92,7 @@
         
         <!-- beta -->
         <div id="betainfo">
-        <a href="http://appstore.com/mac/toshowdesktop">app store<br/></a>
+        <a href="http://itunes.apple.com/cn/app/toshowdesktop/id633131629">app store<br/></a>
         </div>
         <!-- end beta -->
         
