--- a/mac/ToShowDesktop/en/support.html
+++ b/mac/ToShowDesktop/en/support.html
@@ -92,7 +92,7 @@
         
         <!-- beta -->
         <div id="betainfo">
-        <a href="http://appstore.com/mac/toshowdesktop">app store<br/></a>
+        <a href="http://itunes.apple.com/us/app/toshowdesktop/id633131629">app store<br/></a>
         </div>
         <!-- end beta -->
         
