--- a/mac/ToShowDesktop/en/help.html
+++ b/mac/ToShowDesktop/en/help.html
@@ -103,7 +103,7 @@
 		        <main>		        
 		        	<div id="maintenance">
 		        		<div><img src="/images/icon/maintenance@2x.jpg" width="128"></img>
-		        		<h2>Sorry, the website is under maintenance . . .</h2></div>
+		        		<p>Sorry, the website is under maintenance . . .</p></div>
 					</div>
 		        </main>
 		        
