--- a/mac/ToShowDesktop/zh/help.html
+++ b/mac/ToShowDesktop/zh/help.html
@@ -103,7 +103,7 @@
 		        <main>		        
 		        	<div id="maintenance">
 		        		<div><img src="/images/icon/maintenance@2x.jpg" width="100"></img>
-		        		<p>抱歉, 页面正在维护中 . . .</p></div>
+		        		<p>抱歉, 页面正在维护中，请稍后再试 . . .</p></div>
 					</div>
 		        </main>
 		        
