--- a/mac/Icouse/en/index.html
+++ b/mac/Icouse/en/index.html
@@ -132,7 +132,7 @@
 		        	
 		        	<section id="screenshot">
 		        			<h2>screenshot</h2>
-		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x"  alt="[screenshot]"/>
+		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="880" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
