修改大小写

--- a/mac.html
+++ b/mac.html
@@ -131,14 +131,14 @@
                   
                   <li>
                       <div class="ts-display-pf-img">
-                          <a class="image" href="mac/jsonxmlconvert/index.html">
-                          <img src="mac/jsonxmlconvert/image/icon@2x.png" width="64" alt=""  class="scale-with-grid"/>
+                          <a class="image" href="mac/jsonxmlformat/index.html">
+                          <img src="mac/jsonxmlformat/image/icon@2x.png" width="64" alt=""  class="scale-with-grid"/>
                           </a>
                       </div>
                       <div class="ts-display-pf-text">
-                          <h2><a href="mac/jsonxmlconvert/index.html">JsonXmlFormat</a></h2>
+                          <h2><a href="mac/jsonxmlformat/index.html">JsonXmlFormat</a></h2>
                           <p> ver 1.2.1</p>
-                          <a href="https://itunes.apple.com/us/app/jsonxmlconvert/id755258888" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                          <a href="https://itunes.apple.com/us/app/jsonxmlformat/id755258888" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
                       </div>
                       <div class="ts-display-clear"></div>
                   </li>
