--- a/mac.html
+++ b/mac.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="styles/color.css" />
 	<link rel="stylesheet" href="styles/layout.css" />
 	<link rel="stylesheet" href="styles/socialimage.css" />
+	<link rel="stylesheet" href="styles/appstyle.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -107,7 +108,7 @@
                         <div class="ts-display-pf-text">
                             <h2><a href="mac/toshowdesktop/index.html">ToShowDesktop</a></h2>
                             <p> ver 1.2.0</p>
-                            <a href="https://itunes.apple.com/us/app/toshowdesktop/id633131629" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                            <a class="appstore_short" href="https://itunes.apple.com/us/app/toshowdesktop/id633131629"></a>
                         </div>
                         <div class="ts-display-clear"></div>
                     </li>
@@ -123,7 +124,7 @@
                         <div class="ts-display-pf-text">
                             <h2><a href="mac/jsonxmlconvert/index.html">JsonXmlConvert</a></h2>
                             <p> ver 1.1.1</p>
-                            <a href="https://itunes.apple.com/us/app/jsonxmlconvert/id644876099" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                            <a class="appstore_short" href="https://itunes.apple.com/us/app/jsonxmlconvert/id644876099"></a>
                         </div>
                         <div class="ts-display-clear"></div>
                     </li>
@@ -138,7 +139,7 @@
                       <div class="ts-display-pf-text">
                           <h2><a href="mac/jsonxmlformat/index.html">JsonXmlFormat</a></h2>
                           <p> ver 1.2.1</p>
-                          <a href="https://itunes.apple.com/us/app/jsonxmlformat/id755258888" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                          <a class="appstore_short" href="https://itunes.apple.com/us/app/jsonxmlformat/id755258888"></a>
                       </div>
                       <div class="ts-display-clear"></div>
                   </li>
@@ -153,7 +154,7 @@
                       <div class="ts-display-pf-text">
                           <h2><a href="mac/icouse/index.html">Icouse</a></h2>
                           <p> ver 1.2.0</p>
-                          <a href="https://itunes.apple.com/us/app/icouse/id767088370" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                          <a class="appstore_short" href="https://itunes.apple.com/us/app/icouse/id767088370"></a>
                       </div>
                       <div class="ts-display-clear"></div>
                   </li>
@@ -168,7 +169,7 @@
                       <div class="ts-display-pf-text">
                           <h2><a href="mac/shortcutstatus/index.html">ShortcutStatus</a></h2>
                           <p> ver 1.0.0</p>
-                          <a href="https://itunes.apple.com/us/app/shortcutstatus/id766260640" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>
+                          <a class="appstore_short" href="https://itunes.apple.com/us/app/shortcutstatus/id766260640"></a>
                       </div>
                       <div class="ts-display-clear"></div>
                   </li>
