--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                         	<img src="images/content/pic1.jpg" alt="" class="alignnone scale-with-grid" />
                         	<h3 class="smallmargin"> ShortcutStatus </h3>
                             <p>It is a tool which can quick preview of the status bar icon.</p>
-                            <p><a href="mac/ShortcutStatus/index.html" class="button">Read more</a></p>
+                            <p><a href="mac/shortcutstatus/index.html" class="button">Read more</a></p>
                         </div>
                         <div class="four columns omega">
                         	<img src="images/content/pic2.jpg" alt="" class="alignnone scale-with-grid" />
                         	<h3 class="smallmargin"> Icouse </h3>
                             <p>It is a software used to generate the common images.</p>
-                            <p><a href="mac/Icouse/index.html" class="button">Read more</a></p>
+                            <p><a href="mac/icouse/index.html" class="button">Read more</a></p>
                         </div>
                     </article>
 				</section>
