--- a/ios/index.html
+++ b/ios/index.html
@@ -22,12 +22,12 @@
 
 	<!-- CSS
   ================================================== -->
-	<link rel="stylesheet" href="styles/skeleton.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/inner.css" />
-    <link rel="stylesheet" href="styles/color.css" />
-	<link rel="stylesheet" href="styles/layout.css" />
-	<link rel="stylesheet" href="styles/socialimage.css" />
+	<link rel="stylesheet" href="/styles/skeleton.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/inner.css" />
+    <link rel="stylesheet" href="/styles/color.css" />
+	<link rel="stylesheet" href="/styles/layout.css" />
+	<link rel="stylesheet" href="/styles/socialimage.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,14 +35,14 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.png" />
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+	<link rel="shortcut icon" href="/images/favicon.png" />
+	<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
     
 	<!-- Demo Switcher
 	================================================== -->
-    <link id="layoutcss" href="styles/fixed-layout.css" rel="stylesheet" type="text/css" />
+    <link id="layoutcss" href="/styles/fixed-layout.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -59,12 +59,12 @@
                 <section id="navigation" class="nine columns omega">
                     <nav>
                         <ul id="topnav" class="sf-menu">
-                            <li><a href="index.html">home</a></li>
-                            <li><a href="mac.html">mac</a></li>
-                            <li class="current"><a href="ios.html">ios</a></li>
-                            <li><a href="blog.html">blog</a></li>
-                            <li><a href="about.html">about</a></li>
-                            <li><a href="contact.html">contact</a></li>
+                            <li><a href="/index.html">home</a></li>
+                            <li><a href="/mac/index.html">mac</a></li>
+                            <li class="current"><a href="/ios/index.html">ios</a></li>
+                            <li><a href="/blog.html">blog</a></li>
+                            <li><a href="/about.html">about</a></li>
+                            <li><a href="/contact.html">contact</a></li>
                         </ul><!-- topnav -->
                     </nav><!-- nav -->	
                     <div class="clear"></div>
@@ -131,17 +131,17 @@
 <!-- ////////////////////////////////// -->
 <!-- //      Javascript Files        // -->
 <!-- ////////////////////////////////// -->
-<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.6.4.min.js"></script>
 <!-- jQuery Superfish -->
-<script type="text/javascript" src="js/hoverIntent.js"></script> 
-<script type="text/javascript" src="js/superfish.js"></script> 
-<script type="text/javascript" src="js/supersubs.js"></script>
+<script type="text/javascript" src="/js/hoverIntent.js"></script> 
+<script type="text/javascript" src="/js/superfish.js"></script> 
+<script type="text/javascript" src="/js/supersubs.js"></script>
 
 <!-- jQuery Dropdown Mobile -->
-<script type="text/javascript" src="js/tinynav.min.js"></script>
+<script type="text/javascript" src="/js/tinynav.min.js"></script>
 
 <!-- Custom Script -->
-<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="/js/custom.js"></script>
 
 
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
