--- a/blog.html
+++ b/blog.html
@@ -60,8 +60,8 @@
                     <nav>
                         <ul id="topnav" class="sf-menu">
                             <li><a href="index.html">home</a></li>
-                            <li><a href="mac.html">mac</a></li>
-                            <li><a href="ios.html">ios</a></li>
+                            <li><a href="mac/index.html">mac</a></li>
+                            <li><a href="ios/index.html">ios</a></li>
                             <li class="current"><a href="blog.html">blog</a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="contact.html">contact</a></li>
