--- a/mac/icouse/en/help.html
+++ b/mac/icouse/en/help.html
@@ -61,8 +61,8 @@
                     <nav>
                         <ul id="topnav" class="sf-menu">
                             <li><a href="/index.html">home</a></li>
-                            <li class="current"><a href="/mac.html">mac</a></li>
-                            <li><a href="/ios.html">ios</a></li>
+                            <li class="current"><a href="/mac/index.html">mac</a></li>
+                            <li><a href="/ios/index.html">ios</a></li>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/about.html">about</a></li>
                             <li><a href="/contact.html">contact</a></li>
