--- a/mac/index.html
+++ b/mac/index.html
@@ -92,7 +92,7 @@
         <!-- END AFTER HEADER -->
         
         <!-- MAIN CONTENT -->
-        <div id="outermain">
+        <div id="maincontent">
         	<!--<section id="maincontent" class="twelve columns"/>-->
             
             <section class="list_num1">
