--- a/mac/toshowdesktop/ja/index.html
+++ b/mac/toshowdesktop/ja/index.html
@@ -133,6 +133,10 @@
 		        		</dl>
 		        	</section>
 		        	
+		        	<section id="screenshot">
+		        			<h2>スクリーンショット</h2>
+		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="430" alt="[screenshot]"/>
+		        		</section>
 		        	
 		        	<section id="features">
 		        		<h2>機能</h2>
