--- a/mac/shortcutstatus/en/index.html
+++ b/mac/shortcutstatus/en/index.html
@@ -130,6 +130,10 @@
 		        		</dl>
 		        	</section>
 		        	
+		        	<section id="screenshot">
+		        			<h2>screenshot</h2>
+		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="570" alt="[screenshot]"/>
+		        		</section>
 		        	
 		        	<section id="features">
 		        		<h2>Features</h2>
