--- a/mac/index.html
+++ b/mac/index.html
@@ -106,6 +106,7 @@
             			<h3>version 1.2.0 (2013-11-28)</h3>
             			<p>It is a simple tool to show the desktop. Easy to use and can set Dock icon or Status Bar icon. It also allow automatically start at login. Support for global shortcuts and more languages. </p>
             			<a class="button" href="https://itunes.apple.com/us/app/toshowdesktop/id633131629" target="_blank" title="Download">Mac App Store</a> 
+            			<a class="button" href="http://toshowdesktop.mac.informer.com" target="_blank" title="Download"><img src="http://img.informer.com/images/mac/v2/logo_mi.png" width="120" height="13" alt="Mac Informer"/></a>
             			<!-- content ENDS -->
             		</section><!-- section ENDS -->
             	</section>
