--- a/mac/index.html
+++ b/mac/index.html
@@ -106,7 +106,8 @@
             			<h3>version 1.2.0 (2013-11-28)</h3>
             			<p>It is a simple tool to show the desktop. Easy to use and can set Dock icon or Status Bar icon. It also allow automatically start at login. Support for global shortcuts and more languages. </p>
             			<a class="button" href="https://itunes.apple.com/us/app/toshowdesktop/id633131629" target="_blank" title="Download">Mac App Store</a> 
-            			<a class="button" href="http://toshowdesktop.mac.informer.com" target="_blank" title="Download"><img src="http://img.informer.com/images/mac/v2/logo_mi.png" width="120" height="13" alt="Mac Informer"/></a>
+            			<!--<a class="button" href="http://toshowdesktop.mac.informer.com" target="_blank" title="Download"><img src="http://img.informer.com/images/mac/v2/logo_mi.png" width="120" height="13" alt="Mac Informer"/></a> -->
+            			
             			<!-- content ENDS -->
             		</section><!-- section ENDS -->
             	</section>
@@ -138,7 +139,6 @@
             				<h3>version 1.2.1 (2014-01-09)</h3>
             				<p>It is a tool which can format json and xml. Do the accuracy check of json’s or xml’s format and can be formatted output and can customize the output style. Support UTF-8 coded text and display the color mark.</p>
             				<a class="button" href="https://itunes.apple.com/us/app/jsonxmlformat/id755258888" target="_blank" title="Download">Mac App Store</a> 
-            				<a class="button" href="http://jsonxmlformat.mac.informer.com" target="_blank" title="Download"><img src="http://img.informer.com/images/mac/v2/logo_mi.png" width="120" height="13" alt="Mac Informer"/></a> 
             				<!-- content ENDS -->
             			</section><!-- section ENDS -->
             		</section>
@@ -168,7 +168,7 @@
             				
             				<section class="content right">
             				<h2><a href="shortcutstatus/index.html">ShortcutStatus</a><span>free</span></h2>
-            				<h3>version 1.0.0 (2014-04-29)</h3>
+            				<h3>version 1.1.0 (2016-03-12)</h3>
             				<p>It is a tool which can quick preview of the status bar icon. Very easy to drag and drop images. Support for multiple image formats and up to three preview at the same time.</p>
             				<a class="button" href="https://itunes.apple.com/us/app/shortcutstatus/id766260640" target="_blank" title="Download">Mac App Store</a> 
             				<!-- content ENDS -->
