添加轮播图片控件

--- a/about.html
+++ b/about.html
@@ -44,6 +44,10 @@
 	================================================== -->
     <link id="layoutcss" href="styles/fixed-layout.css" rel="stylesheet" type="text/css" />
 
+	<!-- 图片轮播
+	================================================== -->
+	<link rel="stylesheet" href="/styles/flickity-docs.css" media="screen">
+	
 </head>
 
 
