--- a/mac/icouse/en/help.html
+++ b/mac/icouse/en/help.html
@@ -44,6 +44,10 @@
 	<!-- Demo Switcher
 	================================================== -->
     <link id="layoutcss" href="/styles/fixed-layout.css" rel="stylesheet" type="text/css" />
+    
+    <!-- 图片轮播
+    ================================================== -->
+    <link rel="stylesheet" href="/styles/flickity-docs.css" media="screen">
 
 </head>
 
@@ -159,6 +163,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 
 
