修正手机屏下的偏移问题，增加图片自适应屏幕缩放

--- a/mac/icouse/en/support.html
+++ b/mac/icouse/en/support.html
@@ -170,6 +170,9 @@
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
 
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
+
 <!-- CustomComment Script -->
 <script type="text/javascript" src="/js/customcomment.js"></script>
 
