--- a/mac/shortcutstatus/en/index.html
+++ b/mac/shortcutstatus/en/index.html
@@ -132,7 +132,7 @@
 		        	
 		        	<section id="screenshot">
 		        			<h2>screenshot</h2>
-		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="570" alt="[screenshot]"/>
+		        			<img src="../image/screenshot.jpg" srcset="../image/screenshot@2x.jpg 2x" width="570" onload="javascript:drawImage(this)" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
@@ -223,6 +223,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
