--- a/mac/toshowdesktop/en/support.html
+++ b/mac/toshowdesktop/en/support.html
@@ -115,7 +115,7 @@
 		        			 and install it, and read the details. If you see "setting Finder" in the Preferences installation is successful.
 		        			 </dd>
 		        			 
-		        			 <dd><img src="../image/support_preferences.jpg"></dd>
+		        			 <dd><img src="../image/support_preferences.jpg" onload="javascript:drawImage(this)" /></dd>
 		        			 
 		        			 <dd><a href="../file/ToShowDesktop-plugin-1.0.0.zip" class="download" onclick="ga('send', 'event', 'Downloads', 'click', 'CotEditor');">download</a>
 		        			 </dd> 
