--- a/mac/toshowdesktop/ja/support.html
+++ b/mac/toshowdesktop/ja/support.html
@@ -115,7 +115,7 @@
 		        			 それをインストールします，と詳細を読む。環境設定のインストールで "設定 Finder:" を参照してください場合は成功します。
 		        			 </dd>
 		        			 
-		        			 <dd><img src="../image/support_preferences.jpg"></dd>
+		        			 <dd><img src="../image/support_preferences.jpg" onload="javascript:drawImage(this)" /></dd>
 		        			 
 		        			 <dd><a href="../file/ToShowDesktop-plugin-1.0.0.zip" class="download" onclick="ga('send', 'event', 'Downloads', 'click', 'CotEditor');">ダウンロード</a>
 		        			 </dd> 
@@ -182,6 +182,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 <!-- CustomComment Script -->
 <script type="text/javascript" src="/js/customcomment.js"></script>
