--- a/mac/toshowdesktop/zh/support.html
+++ b/mac/toshowdesktop/zh/support.html
@@ -115,7 +115,7 @@
 		        			 并安装插件，阅读安装说明，如果你在偏好设置里看到 "设置 Finder" 就表示安装成功了。
 		        			 </dd>
 		        			 
-		        			 <dd><img src="../image/support_preferences.jpg"></dd>
+		        			 <dd><img src="../image/support_preferences.jpg" onload="javascript:drawImage(this)" /></dd>
 		        			 
 		        			 <dd><a href="../file/ToShowDesktop-plugin-1.0.0.zip" class="download" onclick="ga('send', 'event', 'Downloads', 'click', 'CotEditor');">下载</a>
 		        			 </dd> 
@@ -182,6 +182,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 <!-- CustomComment Script -->
 <script type="text/javascript" src="/js/customcomment.js"></script>
