--- a/mac/vMemory/en/index.html
+++ b/mac/vMemory/en/index.html
@@ -136,8 +136,8 @@
 		        	
 		        	<section id="screenshot">
 		        			<h2>screenshot</h2>
-		        			<img src="../image/screenshot_1.jpg" srcset="../image/screenshot_1@2x.jpg 2x" width="342" alt="[screenshot]"/>
-		        			<img src="../image/screenshot_2.jpg" srcset="../image/screenshot_2@2x.jpg 2x" width="342" alt="[screenshot]"/>
+		        			<img src="../image/screenshot_1.jpg" srcset="../image/screenshot_1@2x.jpg 2x" width="342" onload="javascript:drawImage(this)" alt="[screenshot]"/>
+		        			<img src="../image/screenshot_2.jpg" srcset="../image/screenshot_2@2x.jpg 2x" width="342" onload="javascript:drawImage(this)" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
@@ -241,6 +241,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
