--- a/mac/jsonxmlconvert/en/index.html
+++ b/mac/jsonxmlconvert/en/index.html
@@ -138,7 +138,7 @@
 		        	<section id="screenshot">
 		        			<h2>screenshot</h2>
 		        			<!--<img src="mac/JsonXmlConvert/image/screenshot.jpg" srcset="mac/JsonXmlConvert/image/screenshot@2x.jpg 2x" width="347" alt="[screenshot]"/>-->
-		        			<img src="../image/screenshot.jpg" width="694" alt="[screenshot]"/>
+		        			<img src="../image/screenshot.jpg" width="694" onload="javascript:drawImage(this)" alt="[screenshot]"/>
 		        		</section>
 		        	
 		        	<section id="features">
@@ -232,6 +232,9 @@
 
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
+
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
 
 
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
