--- a/mac/jsonxmlconvert/zh/support.html
+++ b/mac/jsonxmlconvert/zh/support.html
@@ -170,6 +170,9 @@
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
 
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
+
 <!-- CustomComment Script -->
 <script type="text/javascript" src="/js/customcomment.js"></script>
 
