--- a/mac/jsonxmlformat/en/help.html
+++ b/mac/jsonxmlformat/en/help.html
@@ -164,6 +164,9 @@
 <!-- Custom Script -->
 <script type="text/javascript" src="/js/custom.js"></script>
 
+<!-- 图片轮播 -->
+<script type="text/javascript" src="/js/flickity-docs.min.js"></script>
+
 
 
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
